--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -2,8 +2,7 @@
 # It can be edited online at https://dandiarchive.org/dandiset/001260
 # and obtained from the dandiarchive.
 '@context': https://raw.githubusercontent.com/dandi/schema/master/releases/0.6.8/context.json
-about:
-- {}
+about: []
 access:
 - schemaKey: AccessRequirements
   status: dandi:OpenAccess
